--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -10,11 +10,14 @@
     <!-- CSS -->
      <link rel="stylesheet" type="text/css" href="main.css">
 
-    <title>Hello, world!</title>
+    <title>WebApp Prog2</title>
   </head>
   <body>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+
+      <a class="navbar-brand" href="#">al_Capun</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,13 +46,152 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Upload</button>
         </form>
       </div>
+
     </nav>
 
-    <h1>Hello, world!</h1>
+    <!-- Container -->
+    <div class="container mt-5">
+
+      <!-- Info -->
+      <div class="pt-5 mx-auto text-center">
+          <h1 class="display-4">al-Capun</h1>
+          <p class="lead">The internet’s source of freely usable docs and files. <br> Powered by al-Capun.</p>
+      </div>
+
+      <!-- Search --> 
+      <div class="d-flex justify-content-center">
+        <div class="mt-5 col-8 col-md-8 col-lg-6">
+          <form class="form-signin">
+            <div class="form-label-group">
+              <input type="search" id="search" class="form-control" placeholder="Search..." required autofocus>
+            </div>
+          </form>
+        </div>  <!-- col -->
+      </div>  <!-- row -->
+
+      <!-- File Grid -->
+      <div class="row mt-5 mb-5">
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 1 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 1 -->
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 2 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 2 --> 
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 3 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 3 -->
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 4 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 4 -->
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 5 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 5 -->
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 6 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 6 -->
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 7 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 7 -->
+
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 8 -->
+          <div class="card mb-4 box-shadow"> 
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Dummy File</h4>
+            </div>
+            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+            </div>
+          </div>
+        </div> <!-- card 8 -->
+
+      </div> <!-- row -->
+
+    </div> <!-- container --> 
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
