Python-Datei erstellt

--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -56,7 +56,7 @@
     <div class="container mt-5">
 
       <!-- Info -->
-      <div class="pt-5 mx-auto text-center">
+      <div class="pt-5 pb-2 mx-auto text-center">
           <h1 class="display-4">al-Capun</h1>
           <p class="lead">The internet’s source of freely usable docs and files. <br> Powered by al-Capun.</p>
       </div>
