--- a/Code/templates/feed.html
+++ b/Code/templates/feed.html
@@ -82,7 +82,14 @@
             <div class="card-header">
                 <h4 class="my-0 font-weight-normal">Dummy File</h4>
             </div>
-            <img src="../links/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            {% if file['file_type'] == 'word'%} <!-- diese fünf Zeilen funktionieren noch nicht. -->
+              <img src="/static/file-type-images/word.png">
+            {% else %}
+              <img src="/static/file-type-images/500x500.png">
+            {% endif %}
+            <!--
+            <img src="/static/galleries/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+            -->
             <div class="card-body">
               <h5 class="card-title">{{ file['name'] }}</h5>
               <p class="card-text">{{ file['beschreibung'] }}</p>
@@ -90,7 +97,7 @@
             </div>
           </div>
         </div> <!-- card 1 -->
-        
+
         {% endfor %}
 
         <!-- cards from 2 to X (wird in Python nach Bedarf geladen) -->
