--- a/Code/templates/file_upload.html
+++ b/Code/templates/file_upload.html
@@ -52,6 +52,48 @@
 
         </nav>
 
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-md-10 col-lg-8 mt-5 mb-5">
+                    <div class="card">
+                      <div class="card-header">
+                        <h4 class="my-0 font-weight-normal">Upload</h4>                        
+                      </div>
+                      <div class="card-body">
+                        <h5 class="card-title">Please enter your data.</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <form method="POST">
+                              <div class="form-group">
+                                <label for="name">Author name</label>
+                                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Author name">
+                              </div>
+                              <div class="form-group">
+                                <label for="file">File name</label>
+                                <input type="file-name" class="form-control" id="exampleFormControlInput1" placeholder="File name">
+                              </div>
+                              <div class="form-group">
+                                <label for="content">Content description</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Text goes here" rows="5"></textarea>
+                              </div>
+                            </form>
+                            <div class="custom-file">
+                              <input type="file" class="custom-file-input" id="customFile">
+                              <label class="custom-file-label" for="customFile">Choose file</label>
+                            </div>
+                            <a href="#" class="btn btn-outline-dark mt-4">Upload file</a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+            
+
+            
+
+
+
         <!-- Testing File Upload -->
         <h1>File Upload</h1>
         <form method="POST">
@@ -61,12 +103,13 @@
             <label for="beschreibung">Beschreibung: </label>
             <input id="beschreibung" type="text" name="beschreibung"><br>
 
-
+             <!-- 
             <label for="file-type">File Type: </label><br>
             <select id="file-type" name="file-type">
                 <option value="word">Word</option>
                 <option value="none">Etwas Anderes</option>
-            </select>
+            </select><br>
+            -->
 
             <form action="/action_page.php">
                 <label for="myfile">Select a file:</label>
