--- a/Code/templates/feed.html
+++ b/Code/templates/feed.html
@@ -1,27 +1,12 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- CSS -->
-     <link rel="stylesheet" type="text/css" href="main.css">
-
-    <title>WebApp Prog2</title>
-  </head>
-  <body>
-
+{% include "header.html" %}
+<body>
+  <main>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
       <a class="navbar-brand" href="#">al_Capun</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -49,19 +34,15 @@
           <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Upload</button>
         </form>
       </div>
-
     </nav>
-
     <!-- Container -->
     <div class="container mt-5">
-
       <!-- Info -->
       <div class="pt-5 pb-2 mx-auto text-center">
-          <h1 class="display-4">al-Capun</h1>
-          <p class="lead">The internet’s source of freely usable docs and files. <br> Powered by al-Capun.</p>
+        <h1 class="display-4">al-Capun</h1>
+        <p class="lead">The internet’s source of freely usable docs and files. <br> Powered by al-Capun.</p>
       </div>
-
-      <!-- Search --> 
+      <!-- Search -->
       <div class="d-flex justify-content-center">
         <div class="mt-5 col-8 col-md-8 col-lg-6">
           <form class="form-signin">
@@ -71,89 +52,35 @@
           </form>
         </div>  <!-- col -->
       </div>  <!-- row -->
-
-      <!-- File Grid -->
+          <!-- File Grid -->
       <div class="row mt-5 mb-5">
-        
-        {% for file in files %}
-
-        <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 1 -->
-          <div class="card mb-4 box-shadow"> 
-            <div class="card-header">
-                <h4 class="my-0 font-weight-normal">Dummy File</h4>
-            </div>
-
-            <!-- diese fünf Zeilen funktionieren noch nicht.
-            {% if file['file_type'] == 'word'%}
-              <img src="/static/file-type-images/word.png">
-            {% else %}
-              <img src="/static/file-type-images/500x500.png">
-            {% endif %}
-            -->
-            <img src="/static/galleries/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
             
-            <div class="card-body">
-              <h5 class="card-title">{{ file['name'] }}</h5>
-              <p class="card-text">{{ file['beschreibung'] }}</p>
-              <a href="#" class="btn btn-outline-dark">Go somewhere</a>
+        {% for file in files %}
+          <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 1 -->
+            <div class="card mb-4 box-shadow">
+              <div class="card-header">
+                <h4 class="my-0 font-weight-normal">{{ file['file_name'] }}</h4>
+              </div>
+              <!-- diese fünf Zeilen funktionieren noch nicht.
+              {% if file['file_type'] == 'word'%}
+                <img src="/static/file-type-images/word.png">
+              {% else %}
+                <img src="/static/file-type-images/500x500.png">
+              {% endif %}
+              -->
+              <img src="/static/galleries/jj-ying-7JX0-bfiuxQ-unsplash_low.jpg" class="card-img-top" alt="dummy_image">
+              
+              <div class="card-body">
+                <h5 class="card-title">{{ file['name'] }}</h5>
+                <p class="card-text">{{ file['description'] }}</p>
+                <a href="#" class="btn btn-outline-dark">Go to file</a>
+              </div>
             </div>
-          </div>
-        </div> <!-- card 1 -->
-
+          </div> <!-- card 1 -->
         {% endfor %}
-
         <!-- cards from 2 to X (wird in Python nach Bedarf geladen) -->
-
       </div> <!-- row -->
-
-      <footer class="pt-4 my-md-5 pt-md-5 border-top"> <!-- Footer -->
-        <div class="row">
-          <div class="col-12 col-md">
-            <small class="d-block mb-3 text-muted">&copy; al-Capun, 2020</small>
-          </div>
-          <div class="col-6 col-md">
-            <h5>Features</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Cool stuff</a></li>
-              <li><a class="text-muted" href="#">Random feature</a></li>
-              <li><a class="text-muted" href="#">Team feature</a></li>
-              <li><a class="text-muted" href="#">Stuff for developers</a></li>
-              <li><a class="text-muted" href="#">Another one</a></li>
-              <li><a class="text-muted" href="#">Last time</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-md">
-            <h5>Resources</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Resource</a></li>
-              <li><a class="text-muted" href="#">Resource name</a></li>
-              <li><a class="text-muted" href="#">Another resource</a></li>
-              <li><a class="text-muted" href="#">Final resource</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-md">
-            <h5>About</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Team</a></li>
-              <li><a class="text-muted" href="#">Locations</a></li>
-              <li><a class="text-muted" href="#">Privacy</a></li>
-              <li><a class="text-muted" href="#">Terms</a></li>
-            </ul>
-          </div>
-        </div>
-      </footer>
-    </div> <!-- Footer -->
-
     </div> <!-- container -->
-
-  
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
-</html>
+  </main>
+</body>
+        {% include "footer.html" %}
