--- a/Code/templates/file_upload.html
+++ b/Code/templates/file_upload.html
@@ -1,127 +1,80 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <!-- CSS -->
-         <link rel="stylesheet" type="text/css" href="main.css">
-
-        <title>WebApp Prog2</title>
-    </head>
-
-    <body>
+{% include "header.html" %}
+<body>
+    <main>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-          <a class="navbar-brand" href="#">al_Capun</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">al_Capun</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('feed')}}">Feed <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('file_upload')}}">File Upload</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Upload</button>
-            </form>
-          </div>
-
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for('feed')}}">Feed <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('file_upload')}}">File Upload</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Upload</button>
+                </form>
+            </div>
         </nav>
-
+        <div class="container mt-5">
+          <div class="pt-5 pb-2 mx-auto text-center">
+            <h1 class="display-4">Upload</h1>
+            <p class="lead">Thanks for uploading and sharing your files with the community.</p>
+          </div>
+        </div>
         <div class="container">
             <div class="row justify-content-md-center">
                 <div class="col-md-10 col-lg-8 mt-5 mb-5">
                     <div class="card">
-                      <div class="card-header">
-                        <h4 class="my-0 font-weight-normal">Upload</h4>                        
-                      </div>
-                      <div class="card-body">
-                        <h5 class="card-title">Please enter your data.</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <div class="card-header">
+                            <h5 class="my-0 font-weight-normal">Please enter your data.</h5>
+                        </div>
+                        <div class="card-body">
+
                             <form method="POST">
-                              <div class="form-group">
-                                <label for="name">Author name</label>
-                                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Author name">
-                              </div>
-                              <div class="form-group">
-                                <label for="file">File name</label>
-                                <input type="file-name" class="form-control" id="exampleFormControlInput1" placeholder="File name">
-                              </div>
-                              <div class="form-group">
-                                <label for="content">Content description</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Text goes here" rows="5"></textarea>
-                              </div>
+                                <div class="form-group">
+                                    <label for="name">Author name</label>
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Author name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="file_name">File name</label>
+                                    <input type="text" name="file_name" class="form-control" id="file_name" placeholder="File name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="description">Content description</label>
+                                    <textarea class="form-control" name="description" id="description" placeholder="Text goes here" rows="5"></textarea>
+                                </div>
+                            
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" id="customFile">
+                                    <label class="custom-file-label" for="file">Choose file</label>
+                                </div>
+                                <button type="submit" class="btn btn-outline-dark mt-4">Submit</button>
                             </form>
-                            <div class="custom-file">
-                              <input type="file" class="custom-file-input" id="customFile">
-                              <label class="custom-file-label" for="customFile">Choose file</label>
-                            </div>
-                            <a href="#" class="btn btn-outline-dark mt-4">Upload file</a>
-                      </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
-            
-
-            
-
-
-
-        <!-- Testing File Upload -->
-        <h1>File Upload</h1>
-        <form method="POST">
-            <label for="name">File Name: </label>
-            <input id="name" type="text" name="name"><br>
-            
-            <label for="beschreibung">Beschreibung: </label>
-            <input id="beschreibung" type="text" name="beschreibung"><br>
-
-             <!-- 
-            <label for="file-type">File Type: </label><br>
-            <select id="file-type" name="file-type">
-                <option value="word">Word</option>
-                <option value="none">Etwas Anderes</option>
-            </select><br>
-            -->
-
-            <form action="/action_page.php">
-                <label for="myfile">Select a file:</label>
-                <input type="file" id="myfile" name="myfile"><br><br>
-                <input type="submit">
-            </form>
-        </form>
-
-    </body>
-</html>
-
-
-
-
-
+    </main>
+</body>
+{% include "footer.html" %}
