File Upload (Teil mit dem speichern des Uploads) mit Link von Herrn Odoni probiert zu integrieren.

--- a/Code/templates/file_upload.html
+++ b/Code/templates/file_upload.html
@@ -78,6 +78,15 @@
                                 -->
                                 <button type="submit" class="btn btn-outline-dark mt-4">Submit</button>
                             </form>
+
+
+                            <form action="/submitted" enctype=multipart/form-data method="POST" onsubmit="showDiv('loading')">
+                              <input type="text" name="query" size="50" required><br>
+                              <input type="file" id="fileSelect" name="file" accept=".csv">
+                              <input type="submit" id="query_submit">
+                           </form>
+
+                           
                         </div>
                     </div>
                 </div>
