--- a/Code/templates/feed.html
+++ b/Code/templates/feed.html
@@ -59,7 +59,7 @@
           <div class="col-sm-6 col-md-4 col-lg-3 mb-3"> <!-- card 1 -->
             <div class="card mb-4 box-shadow">
               <div class="card-header">
-                <h4 class="my-0 font-weight-normal">{{ file['file_name'] }}</h4>
+                <h4 class="my-0 font-weight-normal">{{ file['file_title'] }}</h4>
               </div>
               <!-- diese fünf Zeilen funktionieren noch nicht.
               {% if file['file_type'] == 'word'%}
@@ -73,7 +73,7 @@
               <div class="card-body">
                 <h5 class="card-title">{{ file['name'] }}</h5>
                 <p class="card-text">{{ file['description'] }}</p>
-                <a href="#" class="btn btn-outline-dark">Go to file</a>
+                <a class="nav-link" class="btn btn-outline-dark" href="{{ url_for('file_upload')}}">Download</a> <!-- für Download // funktioniert noch nicht -->
               </div>
             </div>
           </div> <!-- card 1 -->
