--- a/Code/templates/file_upload.html
+++ b/Code/templates/file_upload.html
@@ -52,16 +52,20 @@
 
                             <form method="POST" enctype="multipart/form-data">
                                 <div class="form-group">
+                                    <label for="file_title">Titel</label>
+                                    <input type="text" name="file_title" class="form-control" id="file_title" placeholder="Title">
+                                </div>
+                                <div class="form-group">
                                     <label for="name">Author name</label>
                                     <input type="text" name="name" class="form-control" id="name" placeholder="Author name">
                                 </div>
                                 <div class="form-group">
                                     <label for="file_name">File name</label>
-                                    <input type="text" name="file_name" class="form-control" id="file_name" placeholder="File name">
+                                    <input type="text" name="file_name" class="form-control" id="file_name" placeholder="File_name">
                                 </div>
                                 <div class="form-group">
                                     <label for="description">Content description</label>
-                                    <textarea class="form-control" name="description" id="description" placeholder="Text goes here" rows="5"></textarea>
+                                    <textarea class="form-control" name="description" id="description" placeholder="Text goes here..." rows="5"></textarea>
                                 </div>
                                 <div class="form-group">
                                   <label>Select image</label>
@@ -70,24 +74,8 @@
                                     <label class="custom-file-label" for="image">Select image...</label>
                                   </div>
                                 </div>    
-                                <!--
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="customFile">
-                                    <label class="custom-file-label" for="file">Choose file</label>
-                                </div>
-                                -->
                                 <button type="submit" class="btn btn-outline-dark mt-4">Submit</button>
                             </form>
-
-                            <!--
-                            <form action="/submitted" enctype=multipart/form-data method="POST" onsubmit="showDiv('loading')">
-                              <input type="text" name="query" size="50" required><br>
-                              <input type="file" id="fileSelect" name="file" accept=".csv">
-                              <input type="submit" id="query_submit">
-                            </form>
-                            -->
-
-
                         </div>
                     </div>
                 </div>
