plotly in statistics eingebunden

--- a/Code/templates/footer.html
+++ b/Code/templates/footer.html
@@ -6,32 +6,27 @@
             <small class="d-block mb-3 text-muted">&copy; al-Capun, 2020</small>
         </div>
         <div class="col-6 col-md">
-            <h5>Features</h5>
+            <h5>Helpers</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Cool stuff</a></li>
-                <li><a class="text-muted" href="#">Random feature</a></li>
-                <li><a class="text-muted" href="#">Team feature</a></li>
-                <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                <li><a class="text-muted" href="#">Another one</a></li>
-                <li><a class="text-muted" href="#">Last time</a></li>
+                <li><a class="text-muted" href="https://pythonise.com/series/learning-flask/flask-uploading-files#">Uploading files</a></li>
+                <li><a class="text-muted" href="https://flask.palletsprojects.com/en/1.1.x/">Flask Documentation</a></li>
+                <li><a class="text-muted" href="https://plotly.com/python/bar-charts/">Plotly bar chart</a></li>
+                <li><a class="text-muted" href="https://stackoverflow.com/">Stack Overflow</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
-            <h5>Resources</h5>
+            <h5>Code</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Resource</a></li>
-                <li><a class="text-muted" href="#">Resource name</a></li>
-                <li><a class="text-muted" href="#">Another resource</a></li>
-                <li><a class="text-muted" href="#">Final resource</a></li>
+                <li><a class="text-muted" href="https://github.com/al-Capun/PROG2">Git Hub Repo</a></li>
             </ul>
         </div>
         <div class="col-6 col-md">
-            <h5>About</h5>
+            <h5>Ersteller</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Team</a></li>
-                <li><a class="text-muted" href="#">Locations</a></li>
-                <li><a class="text-muted" href="#">Privacy</a></li>
-                <li><a class="text-muted" href="#">Terms</a></li>
+                <li><a class="text-muted" >Antonin Friberg</a></li>
+                <li><a class="text-muted" >DBM18TZ</a></li>
+                <li><a class="text-muted" >FHGR</a></li>
+
             </ul>
         </div>
     </div>
