--- a/Code/templates/feed.html
+++ b/Code/templates/feed.html
@@ -3,7 +3,7 @@
   <main>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">al_Capun</a>
+      <a class="navbar-brand" href="{{ url_for('feed')}}">al_Capun</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
