--- a/Code/templates/footer.html
+++ b/Code/templates/footer.html
@@ -8,10 +8,13 @@
         <div class="col-6 col-md">
             <h5>Helpers</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="https://pythonise.com/series/learning-flask/flask-uploading-files#">Uploading files</a></li>
+                <li><a class="text-muted" href="https://pythonise.com/series/learning-flask/flask-uploading-files#">Uploading files with Flask</a></li>
                 <li><a class="text-muted" href="https://flask.palletsprojects.com/en/1.1.x/">Flask Documentation</a></li>
                 <li><a class="text-muted" href="https://plotly.com/python/bar-charts/">Plotly bar chart</a></li>
                 <li><a class="text-muted" href="https://stackoverflow.com/">Stack Overflow</a></li>
+                <li><a class="text-muted" href="https://getbootstrap.com/docs/4.5/getting-started/introduction/">Bootstrap Documentation</a></li>
+                <li><a class="text-muted" href="https://jinja.palletsprojects.com/en/2.11.x/">Jinja Documentation</a></li>
+                
             </ul>
         </div>
         <div class="col-6 col-md">
