--- a/Code/templates/header.html
+++ b/Code/templates/header.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- CSS -->
+    
     <link rel="stylesheet" type="text/css" href="main.css">
+    <!-- Die CSS Datei (die für meine Arbeit nicht verwendet wurde) wird im Ordner "static" abgelegt.
+    Der static Ordner dient dazu, statischen Web-Content zu verwalten. Bilder, CSS Dateien oder JavaScripts werden im static Ordner gespeichert. -->
     <title>WebApp Prog2</title>
   </head>
