--- a/Code/templates/statistics.html
+++ b/Code/templates/statistics.html
@@ -29,7 +29,7 @@
             <p class="lead">Here you will find some nice statistics about al_Capun.</p>
           </div>
         </div>
-        {{ viz_div|safe }} <!-- für die Visualisierung -->
+        {{ viz_div|safe }} <!-- für die Visualisierung mit Plotly -->
   </main>
 </body>
         {% include "footer.html" %}
